# DistCorr-lib

./: CMakeLists.txt  README.md  README.txt
data/: IMG_7001.CR2.fimage.pgm
data/.svn/: entries
data/.svn/text-base/: IMG_6931.CR2.fimage.pgm.svn-base  IMG_6950.CR2.fimage.pgm.svn-base  IMG_6964.CR2.fimage.pgm.svn-base  IMG_6967.CR2.fimage.pgm.svn-base  IMG_7010.CR2.fimage.pgm.svn-base
distortion/: CMakeLists.txt  distCorrection.cpp  distCorrection.cpp~  misc.cpp  polyEstimation.cpp  polyEstimation.cpp~
distortion/.svn/: entries
distortion/.svn/text-base/: distCorrection.cpp.svn-base  misc.h.svn-base  polyEstimation.cpp.svn-base
libDistortion/: CMakeLists.txt  LM.h  LM.h~  distortion.cpp  distortion.cpp~  distortion.h  distortion.h~
libDistortion/.svn/: entries
libDistortion/.svn/text-base/: distortion.cpp.svn-base  distortion.h.svn-base
libImage/: CMakeLists.txt  correction.h  correction.h~  image.h  pgm_io.cpp  pgm_io.h  spline.h
libImage/.svn/: entries
libImage/.svn/text-base/: image.cpp.svn-base  spline.cpp.svn-base
libLineDetection/: CMakeLists.txt  devernay.h  gaussian_convol_on_curve.cpp  gaussian_convol_on_curve.h  lsd.cpp  ntuple_ll.cpp  ntuple_ll.h  straight_edge_points.cpp
libLineDetection/.svn/: entries
libLineDetection/.svn/text-base/: devernay.cpp.svn-base  gauss.cpp.svn-base  gauss.h.svn-base  lsd.h.svn-base  ntuple.cpp.svn-base  ntuple.h.svn-base  straight_edge_points.h.svn-base
libNumerics/: alternatives.h  matrix.cpp  matrix.cpp~  matrix.h  matrix.h~  vector.cpp  vector.cpp~
libNumerics/.svn/: entries
(+3 files in other folders)
